2001-08-01  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c (create_root_password_dialog) pass a gchar here
	as a argument for the dialog text. This way a seperate dialog
	asking if the user wants to enter the password is not needed. 
	Beautify the dialog a bit
	(create_renice_dialog) change the button to read Change Priority
	instead of renice.

	* procactions.c: pass the root password text to 
	create_root_passsword_dialog

2001-08-31   Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: left justify the disk name and mount point
	clist entries.
	
	* procactions.c: do the su stuff on renice. Slightly different
	error message for when the user does not have permission or
	when they have permission but try to lower the nice value.

	* procactions.c (renice): pass procdata in here in order to 
	pass it to the password dialog.

	* procdialogs.c (renice_accept): pass procdata ro renice

2001-08-31  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: add notebook tab for process viewer and
	system monitor settings. Add settings for graph colors, and
	graph/disk update intervals.

	* callbacks.c: change gpointer to a procdata instead of the clist
	so that you don't have to access the clist to use this function
	anywhere in the code. The clist is now stored in procdata.

	* interface.c: pass procdata to cb_update_disks

	* load_graph.c: change back to 2 pixel line width

	* prettytable.c: remove some debugging stuff. 
	(prettytable_load_async) return if thread could not be created.

	* procman.[c,h]: add config variable for disk update interval.
	Add to ProcInfo structure booleans if process is thread and
	if it has a .desktop file.

	* proctable.c: some reordering of the code initiated by the fact that
	(thread) was not being added anymore. A benefit is that we don't
	call prettytable_get_icons more than needed.
	(update_info): don't try to get icon or name if it has already
	been checked (info->has_desktop_file is either 0 or 1). Be