@@ -1,3 +1,11 @@
+2001-08-02  Kevin Vandersloot <kfv101@psu.edu>
+
+	* procdialogs.c: improve the renice dialog by adding a label
+	indicating whether the priority is high etc.
+
+	* infoview.c: sync the priority label with that of the renice
+	dialog
+
 2001-08-01  Kevin Vandersloot <kfv101@psu.edu>
 
 	* procdialogs.c (create_root_password_dialog) pass a gchar here
